--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .container-flex {
     max-width: 1200px;
     margin: 0 auto;
-    
+
 }
 
 .brand {
@@ -15,14 +15,26 @@
     height: 100px;
     background-color: lightgray;
     border-radius: 10px 10px 0 0;
+    line-height: 100px;
+    text-align: center;
+    font-family: "Lexend Peta", sans-serif; 
+    font-size: 30px;
 }
 
 .screen {
     width: 350px;
     height: 100px;
     background-color: black;
+    
 }
-
+.zero {
+    color: rgb(34, 246, 172);
+    font-family:  "Lexend Peta", sans-serif;
+    line-height: 100px;
+    text-align: right;
+    font-size: 50px;
+    margin-right: 30px;
+}
 .calculator {
     width: 350px;
     height: 350px;
