--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@
 /* NUMERI SCHERMO */
 .zero {
     color: rgb(34, 246, 172);
-    font-family:  "Lexend Peta", sans-serif;
+    font-family:  "seven segment", sans-serif;
     line-height: 100px;
     text-align: right;
     font-size: 50px;
