--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
     width: 350px;
     height: 100px;
     background-color: lightgray;
+    background-image: linear-gradient(to left, rgb(236, 236, 236),rgb(187, 187, 187));
     border-radius: 10px 10px 0 0;
     line-height: 100px;
     text-align: center;
@@ -28,10 +29,11 @@
     
 }
 
-.calculator {
+.numbers {
     width: 350px;
     height: 350px;
     background-color: lightgray;
+    background-image: linear-gradient(to left, rgb(236, 236, 236),rgb(187, 187, 187));
     border-radius: 0 0 10px 10px;
 }
 
@@ -77,6 +79,32 @@
     
 }
 
+.b-green {
+    text-align: center;
+    line-height: 60px;
+    background-color: rgb(53, 156, 142);
+    font-size: 30px;
+    border-radius: 5px;
+    color: white;
+    
+}
+
+.square-operators {
+    width: 60px;
+    height: 60px;
+    margin: 5px;
+}
+
+.orange-op{
+    text-align: center;
+    line-height: 60px;
+    background-color: rgb(255, 149, 27);
+    font-size: 30px;
+    border-radius: 5px;
+    color: white;
+}
+
+
 .outset {
     border-style: outset;
     border-color: rgb(156, 156, 156);
@@ -121,7 +149,8 @@
     padding: 20px;
 }
 
-.align {
-    align-content: stretch;
+
+.column-op {
+    flex-direction: column;
 }
 
